# SoftwareProjectFinalProject

./: CMakeLists.txt  Parser.c  Parser.h  edit.c  edit.h  game.c  game.h  gurobi.c  gurobi.h  init.h  main.c  main_aux.c  main_aux.h  parser.c  parser.h  solve.h  solver.c  solver.h  utilities.c  utilities.h  utilitiesBoardManager.c  utilitiesBoardManager.h  utilitiesLinkedList.c  utilitiesLinkedList.h  utilities_board_manager.c  utilities_board_manager.h  utilities_linked_list.c  utilities_linked_list.h
util/: board_manager.c  board_manager.h  linked_list.c  linked_list.h
